--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -18,3 +18,13 @@ jobs:
       with:
         name: hello-artifact
         path: hello.txt
+
+  download:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Download Archive
+      uses: actions/download-artifact@v4
+      with:
+        name: hello-artifact
+    - name: Show file
+      run: cat ./artifacts/hello.txt
