--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -19,6 +19,7 @@ jobs:
         path: hello.txt
 
   download:
+    needs: build
     runs-on: ubuntu-latest
     steps:
     - name: Download Archive
