--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -26,7 +26,8 @@ jobs:
       uses: actions/download-artifact@v4
       with:
         name: hello-artifact
+        path: ./artifact
     - name: Show file
       run: |
           ls -lrta
-          cat hello.txt
+          cat ./artifact/hello.txt
