--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -26,8 +26,8 @@ jobs:
       uses: actions/download-artifact@v4
       with:
         name: hello-artifact
-        path: ./artifact
+        path: ./artifacts
     - name: Show file
       run: |
           ls -lrta
-          cat ./artifact/hello.txt
+          cat ./artifacts/hello.txt
